// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ascension and levels infers a servant's ascension correctly 1`] = `
[
  <div
    className="flex flex-col items-center sm:flex-row sm:items-start flex-nowrap gap-2 mb-4"
  >
    <img
      alt="Artoria Pendragon"
      className="w-20 h-20 squircle"
      height="128"
      loading="lazy"
      src="/86c499b4e08c60449eee8d3fcb2e07ab.png"
      width="128"
    />
    <div
      className="w-full flex flex-col flex-grow justify-center"
    >
      <ServantSelect />
      <select
        className="bg-white p-1 rounded-lg border focus:ring-2 focus:ring-indigo-500 hover:ring-2 hover:ring-indigo-400"
        name="priority"
        onBlur={[Function]}
        onChange={[Function]}
        value="Low"
      >
        <option
          value="High"
        >
          High
        </option>
        <option
          value="Medium"
        >
          Medium
        </option>
        <option
          value="Low"
        >
          Low
        </option>
        <option
          value="Unsummoned"
        >
          Unsummoned
        </option>
      </select>
    </div>
  </div>,
  <div
    className="flex flex-col flex-grow"
  >
    <div
      className="flex flex-row flex-wrap mt-2 gap-2 2xl:gap-1"
    >
      <div
        className="rounded-md"
      >
        <div
          className="flex flex-col p-2"
        >
          <span
            className="text-xl"
          >
             
            Level
             
          </span>
          <div
            className="flex"
          >
            <Input
              placeholder="1"
              value="1"
            />
            <Input
              value="90"
            />
          </div>
        </div>
      </div>
      <div
        className="rounded-md"
      >
        <div
          className="flex flex-col p-2"
        >
          <span
            className="text-xl"
          >
             
            Ascension
             
          </span>
          <div
            className="flex"
          >
            <Input
              placeholder="0"
              value=""
            />
            <Input
              placeholder="4"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="flex flex-col mt-2"
    >
      <span
        className="text-xl px-2"
      >
         Skills 
      </span>
      <div
        className="flex flex-wrap gap-2 2xl:gap-1"
      >
        <div
          className="rounded-md"
        >
          <div
            className="flex flex-col p-2"
          >
            <span
              className="text-xl"
            >
               
               
            </span>
            <div
              className="flex"
            >
              <Input
                placeholder="1"
                value=""
              />
              <Input
                value=""
              />
            </div>
          </div>
        </div>
        <div
          className="rounded-md"
        >
          <div
            className="flex flex-col p-2"
          >
            <span
              className="text-xl"
            >
               
               
            </span>
            <div
              className="flex"
            >
              <Input
                placeholder="1"
                value=""
              />
              <Input
                value=""
              />
            </div>
          </div>
        </div>
        <div
          className="rounded-md"
        >
          <div
            className="flex flex-col p-2"
          >
            <span
              className="text-xl"
            >
               
               
            </span>
            <div
              className="flex"
            >
              <Input
                placeholder="1"
                value=""
              />
              <Input
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="flex flex-col mt-2"
    >
      <span
        className="text-xl px-2"
      >
         Append Skills 
      </span>
      <div
        className="flex flex-wrap gap-2 2xl:gap-1"
      >
        <div
          className="rounded-md"
        >
          <div
            className="flex flex-col p-2"
          >
            <span
              className="text-xl"
            >
               
               
            </span>
            <div
              className="flex"
            >
              <Input
                placeholder="0"
                value=""
              />
              <Input
                value=""
              />
            </div>
          </div>
        </div>
        <div
          className="rounded-md"
        >
          <div
            className="flex flex-col p-2"
          >
            <span
              className="text-xl"
            >
               
               
            </span>
            <div
              className="flex"
            >
              <Input
                placeholder="0"
                value=""
              />
              <Input
                value=""
              />
            </div>
          </div>
        </div>
        <div
          className="rounded-md"
        >
          <div
            className="flex flex-col p-2"
          >
            <span
              className="text-xl"
            >
               
               
            </span>
            <div
              className="flex"
            >
              <Input
                placeholder="0"
                value=""
              />
              <Input
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="mt-2"
    >
      <ShortServantRequirements />
    </div>
  </div>,
  <button
    className="absolute top-1 left-1 text-2xl w-6 h-6 flex items-center justify-center rounded-full bg-white bg-opacity-80 hover:bg-opacity-100 text-gray-900 hover:text-gray-600"
    onClick={[Function]}
    type="button"
  >
    ×
  </button>,
]
`;

exports[`Ascension and levels supports mixed ascension and level 1`] = `
[
  <div
    className="flex flex-col items-center sm:flex-row sm:items-start flex-nowrap gap-2 mb-4"
  >
    <img
      alt="Artoria Pendragon"
      className="w-20 h-20 squircle"
      height="128"
      loading="lazy"
      src="/fc034d773d3c4e51bce020ffdaa5569b.png"
      width="128"
    />
    <div
      className="w-full flex flex-col flex-grow justify-center"
    >
      <ServantSelect />
      <select
        className="bg-white p-1 rounded-lg border focus:ring-2 focus:ring-indigo-500 hover:ring-2 hover:ring-indigo-400"
        name="priority"
        onBlur={[Function]}
        onChange={[Function]}
        value="Low"
      >
        <option
          value="High"
        >
          High
        </option>
        <option
          value="Medium"
        >
          Medium
        </option>
        <option
          value="Low"
        >
          Low
        </option>
        <option
          value="Unsummoned"
        >
          Unsummoned
        </option>
      </select>
    </div>
  </div>,
  <div
    className="flex flex-col flex-grow"
  >
    <div
      className="flex flex-row flex-wrap mt-2 gap-2 2xl:gap-1"
    >
      <div
        className="rounded-md"
      >
        <div
          className="flex flex-col p-2"
        >
          <span
            className="text-xl"
          >
             
            Level
             
          </span>
          <div
            className="flex"
          >
            <Input
              placeholder="1"
              value="1"
            />
            <Input
              value="90"
            />
          </div>
        </div>
      </div>
      <div
        className="bg-green-200 rounded-md"
      >
        <div
          className="flex flex-col p-2"
        >
          <span
            className="text-xl"
          >
             
            Ascension
             
          </span>
          <div
            className="flex"
          >
            <Input
              placeholder="4"
              value="4"
            />
            <Input
              placeholder="4"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="flex flex-col mt-2"
    >
      <span
        className="text-xl px-2"
      >
         Skills 
      </span>
      <div
        className="flex flex-wrap gap-2 2xl:gap-1"
      >
        <div
          className="rounded-md"
        >
          <div
            className="flex flex-col p-2"
          >
            <span
              className="text-xl"
            >
               
               
            </span>
            <div
              className="flex"
            >
              <Input
                placeholder="1"
                value=""
              />
              <Input
                value=""
              />
            </div>
          </div>
        </div>
        <div
          className="rounded-md"
        >
          <div
            className="flex flex-col p-2"
          >
            <span
              className="text-xl"
            >
               
               
            </span>
            <div
              className="flex"
            >
              <Input
                placeholder="1"
                value=""
              />
              <Input
                value=""
              />
            </div>
          </div>
        </div>
        <div
          className="rounded-md"
        >
          <div
            className="flex flex-col p-2"
          >
            <span
              className="text-xl"
            >
               
               
            </span>
            <div
              className="flex"
            >
              <Input
                placeholder="1"
                value=""
              />
              <Input
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="flex flex-col mt-2"
    >
      <span
        className="text-xl px-2"
      >
         Append Skills 
      </span>
      <div
        className="flex flex-wrap gap-2 2xl:gap-1"
      >
        <div
          className="rounded-md"
        >
          <div
            className="flex flex-col p-2"
          >
            <span
              className="text-xl"
            >
               
               
            </span>
            <div
              className="flex"
            >
              <Input
                placeholder="0"
                value=""
              />
              <Input
                value=""
              />
            </div>
          </div>
        </div>
        <div
          className="rounded-md"
        >
          <div
            className="flex flex-col p-2"
          >
            <span
              className="text-xl"
            >
               
               
            </span>
            <div
              className="flex"
            >
              <Input
                placeholder="0"
                value=""
              />
              <Input
                value=""
              />
            </div>
          </div>
        </div>
        <div
          className="rounded-md"
        >
          <div
            className="flex flex-col p-2"
          >
            <span
              className="text-xl"
            >
               
               
            </span>
            <div
              className="flex"
            >
              <Input
                placeholder="0"
                value=""
              />
              <Input
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="mt-2"
    >
      <ShortServantRequirements />
    </div>
  </div>,
  <button
    className="absolute top-1 left-1 text-2xl w-6 h-6 flex items-center justify-center rounded-full bg-white bg-opacity-80 hover:bg-opacity-100 text-gray-900 hover:text-gray-600"
    onClick={[Function]}
    type="button"
  >
    ×
  </button>,
]
`;

exports[`renders the empty servant correctly 1`] = `
[
  <div
    className="flex flex-col items-center sm:flex-row sm:items-start flex-nowrap gap-2 mb-4"
  >
    <img
      alt="Artoria Pendragon"
      className="w-20 h-20 squircle"
      height="128"
      loading="lazy"
      src="/86c499b4e08c60449eee8d3fcb2e07ab.png"
      width="128"
    />
    <div
      className="w-full flex flex-col flex-grow justify-center"
    >
      <ServantSelect />
      <select
        className="bg-white p-1 rounded-lg border focus:ring-2 focus:ring-indigo-500 hover:ring-2 hover:ring-indigo-400"
        name="priority"
        onBlur={[Function]}
        onChange={[Function]}
        value="Low"
      >
        <option
          value="High"
        >
          High
        </option>
        <option
          value="Medium"
        >
          Medium
        </option>
        <option
          value="Low"
        >
          Low
        </option>
        <option
          value="Unsummoned"
        >
          Unsummoned
        </option>
      </select>
    </div>
  </div>,
  <div
    className="flex flex-col flex-grow"
  >
    <div
      className="flex flex-row flex-wrap mt-2 gap-2 2xl:gap-1"
    >
      <div
        className="rounded-md"
      >
        <div
          className="flex flex-col p-2"
        >
          <span
            className="text-xl"
          >
             
            Level
             
          </span>
          <div
            className="flex"
          >
            <Input
              placeholder="1"
              value=""
            />
            <Input
              value=""
            />
          </div>
        </div>
      </div>
      <div
        className="rounded-md"
      >
        <div
          className="flex flex-col p-2"
        >
          <span
            className="text-xl"
          >
             
            Ascension
             
          </span>
          <div
            className="flex"
          >
            <Input
              value=""
            />
            <Input
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="flex flex-col mt-2"
    >
      <span
        className="text-xl px-2"
      >
         Skills 
      </span>
      <div
        className="flex flex-wrap gap-2 2xl:gap-1"
      >
        <div
          className="rounded-md"
        >
          <div
            className="flex flex-col p-2"
          >
            <span
              className="text-xl"
            >
               
               
            </span>
            <div
              className="flex"
            >
              <Input
                placeholder="1"
                value=""
              />
              <Input
                value=""
              />
            </div>
          </div>
        </div>
        <div
          className="rounded-md"
        >
          <div
            className="flex flex-col p-2"
          >
            <span
              className="text-xl"
            >
               
               
            </span>
            <div
              className="flex"
            >
              <Input
                placeholder="1"
                value=""
              />
              <Input
                value=""
              />
            </div>
          </div>
        </div>
        <div
          className="rounded-md"
        >
          <div
            className="flex flex-col p-2"
          >
            <span
              className="text-xl"
            >
               
               
            </span>
            <div
              className="flex"
            >
              <Input
                placeholder="1"
                value=""
              />
              <Input
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="flex flex-col mt-2"
    >
      <span
        className="text-xl px-2"
      >
         Append Skills 
      </span>
      <div
        className="flex flex-wrap gap-2 2xl:gap-1"
      >
        <div
          className="rounded-md"
        >
          <div
            className="flex flex-col p-2"
          >
            <span
              className="text-xl"
            >
               
               
            </span>
            <div
              className="flex"
            >
              <Input
                placeholder="0"
                value=""
              />
              <Input
                value=""
              />
            </div>
          </div>
        </div>
        <div
          className="rounded-md"
        >
          <div
            className="flex flex-col p-2"
          >
            <span
              className="text-xl"
            >
               
               
            </span>
            <div
              className="flex"
            >
              <Input
                placeholder="0"
                value=""
              />
              <Input
                value=""
              />
            </div>
          </div>
        </div>
        <div
          className="rounded-md"
        >
          <div
            className="flex flex-col p-2"
          >
            <span
              className="text-xl"
            >
               
               
            </span>
            <div
              className="flex"
            >
              <Input
                placeholder="0"
                value=""
              />
              <Input
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="mt-2"
    >
      <ShortServantRequirements />
    </div>
  </div>,
  <button
    className="absolute top-1 left-1 text-2xl w-6 h-6 flex items-center justify-center rounded-full bg-white bg-opacity-80 hover:bg-opacity-100 text-gray-900 hover:text-gray-600"
    onClick={[Function]}
    type="button"
  >
    ×
  </button>,
]
`;
